--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/gridstack/dist/gridstack.min.css"
             ],
             "scripts": []
           },
